name:                shake-cpp
version:             0.1.0.0
license-file:        LICENSE
author:              John Feltz
maintainer:          jfeltz@gmail.com
build-type:          Simple
cabal-version:       >=1.18

library  
  exposed-modules:     
    Control.Monad.Reader.Rules
    Development.Shake.Cpp.Boost 
    Development.Shake.Cpp.LLVM 
    Development.Shake.Cpp.Build 
    Development.Shake.Cpp.Build.Gcc 
    Development.Shake.Cpp.Ld 
    Development.Shake.Cpp.Rule
    Development.Shake.Cpp.Gcc 
    Development.Shake.Cpp.Obj 
    Development.Shake.Cpp.Paths 
    Development.Shake.Cpp.ExecDeps 
    Development.Shake.Cpp.ObjectDeps 
    Development.Shake.Install 
    Development.Shake.Iso 
    Development.Shake.Mode 
  build-depends:   base >=4.7 && <4.8
                 , base-unicode-symbols == 0.2.2.4
                 , bytestring >= 0.10.4.0
                 , bytestring-trie >= 0.1.4
                 , containers >= 0.5.5.1
                 , directory == 1.2.1.0
                 , filepath >= 1.3.0.2
                 , hastache == 0.6.0
                 , mtl >= 2.1.3.1
                 , shake >=0.13 && <0.14
                 , system-filepath >= 0.4.12
                 , text >= 1.1.1.3
  default-language:    Haskell2010
  ghc-options:         -rtsopts -with-rtsopts=-I0
  hs-source-dirs:      ./src
